<resources>
    <string name="app_name">Munchy Box</string>

    <string name="action_settings">Settings</string>
    <string name="my_products">My Products</string>
    <string name="transfer">Pay</string>
    <string name="profile">Profile</string>
    <string name="options">Options</string>
    <string name="hello">Hello</string>
    <string name="my_account">My Account</string>
    <string name="euro" translatable="false">€</string>
    <string name="balance">Total</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="zero">0</string>
    <string name="available">available</string>
    <string name="add_payment_method">Add payment method</string>
    <string name="dollar">$</string>
    <string name="lb_tag">Enter Tag Number</string>
    <string name="description">description</string>
    <string name="entertagnumber">Enter Tag Number</string>
    <string name="enter">Enter</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">2839597522800110</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb2839597522800110</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
    <string name="subtotal">SubTotal:</string>
    <string name="total">Total</string>

</resources>
