<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>
    <variable
      name="product"
      type="com.cabify.cabistore.database.SaleDetail" />


  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primaryDark_custom"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingTop="5dp"
    android:paddingEnd="10dp"
    android:paddingBottom="5dp"
    app:layout_constraintCircleRadius="3dp"

    >

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/tvItemQty"
      android:layout_width="32dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="140dp"
      android:layout_marginBottom="8dp"
      android:elevation="4dp"
      android:fontFamily="@font/barlow_regular"
      android:text="@string/zero"
      android:textColor="@color/white"
      android:textSize="12sp"
      android:textStyle="bold"
      android:visibility="visible"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:setProductQty="@{product}" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/textItem"
      android:layout_width="100dp"
      android:layout_height="wrap_content"
      android:elevation="4dp"
      android:fontFamily="@font/barlow_regular"
      android:text="@string/my_products"
      android:textColor="@color/white"
      android:textSize="8sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textCode"
      app:setProductName="@{product}" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/tvItemsAmount"
      android:layout_width="40dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:elevation="4dp"

      android:fontFamily="@font/barlow_regular"
      android:gravity="end"
      android:text="0$"
      android:textColor="@color/white"
      android:textSize="12sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toEndOf="@+id/tvItemQty"
      app:layout_constraintTop_toTopOf="parent"
      app:setProductPrice="@{product}" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/tvItemsAmount2"
      android:layout_width="60dp"
      android:layout_height="17dp"
      android:layout_marginStart="20dp"

      android:layout_marginBottom="8dp"
      android:elevation="4dp"
      android:fontFamily="@font/barlow_regular"
      android:gravity="end"
      android:text="0$"
      android:textColor="@color/white"
      android:textSize="12sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toEndOf="@+id/tvItemsAmount"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.523"
      app:setProductSubTotal="@{product}" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/textCode"
      android:layout_width="128dp"
      android:layout_height="0dp"
      android:layout_marginTop="8dp"
      android:elevation="4dp"
      android:fontFamily="@font/barlow_regular"
      android:gravity="start"
      android:text="@string/available"
      android:textAllCaps="true"
      android:textColor="@color/white"
      android:textSize="12sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:setProductCode="@{product}" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>