<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fitsSystemWindows="true"
  >

  <ScrollView

      android:layout_width="match_parent"
      android:layout_height="match_parent"

      >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <androidx.appcompat.widget.Toolbar
          android:id="@+id/toolbar2"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:background="?attr/colorPrimary"
          android:minHeight="?attr/actionBarSize"
          android:textAlignment="center"
          android:theme="?attr/actionBarTheme"
          app:flow_horizontalAlign="end"
          app:flow_verticalAlign="center"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:subtitleTextColor="@color/white"
          app:title="@string/app_name"
          app:titleTextColor="@color/white" />

      <TextView
          android:id="@+id/tvString3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="60dp"
          android:layout_marginEnd="10dp"
          android:background="@color/primaryDark_custom"
          android:gravity="end"
          android:text="@string/total"
          android:textColor="@color/white"
          android:textStyle="bold"
          android:visibility="visible"
          app:layout_constraintEnd_toStartOf="@+id/tvSubTotal"
          app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

      <TextView
          android:id="@+id/tvSubTotal"
          android:layout_width="wrap_content"
          android:layout_height="0dp"
          android:layout_marginTop="60dp"
          android:layout_marginEnd="16dp"
          android:background="@color/primaryDark_custom"
          android:gravity="end"
          android:text="@string/dollar"
          android:textColor="@color/white"
          android:textStyle="bold"
          android:visibility="visible"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/toolbar2" />


      <com.stripe.android.view.CardInputWidget
          android:id="@+id/cardInputWidget"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="10dp"
          android:layout_marginTop="16dp"
          android:layout_marginEnd="10dp"
          android:background="#757575"
          android:foregroundTint="#FFFFFF"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tvString3" />

      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/payButton"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginStart="8dp"
          android:layout_marginTop="20dp"
          android:layout_marginEnd="8dp"
          android:layout_marginBottom="24dp"
          android:drawableStart="@drawable/ic_material_credit_card"
          android:text="PAY"
          android:textAlignment="center"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/cardInputWidget"
          app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
  </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>