<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>
   <variable
     name="product"
     type="com.cabify.cabistore.database.SaleDetail" />
    <variable
      name="saleDetail"
      type="com.cabify.cabistore.database.SaleDetail" />

    <variable
    name="clickListener"
    type="com.cabify.cabistore.ui.global.GlobalListener" />

    <variable
    name="removeClickListener"
    type="com.cabify.cabistore.ui.global.RemoveListener" />

    <variable
      name="addClickListener"
      type="com.cabify.cabistore.ui.global.AddListener" />


  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/surfaceGray"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingTop="5dp"
    android:paddingEnd="10dp"
    android:paddingBottom="5dp"
    app:layout_constraintCircleRadius="3dp"

    >

    <View
      android:id="@+id/viewAccounts"
      android:layout_width="0dp"
      android:layout_height="75dp"
      android:layout_marginTop="5dp"
      android:layout_marginBottom="5dp"
      android:background="@drawable/backgroundproducts"
      android:elevation="4dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.473"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/tvItemQty"
      android:layout_width="32dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:elevation="4dp"
      android:fontFamily="@font/barlow_regular"
      android:text="@string/zero"
      android:textColor="@color/colorPrimaryAccent"
      android:textSize="23sp"
      android:textStyle="bold"
      android:visibility="visible"
      app:layout_constraintBottom_toTopOf="@+id/textAccountNumber"
      app:layout_constraintStart_toEndOf="@+id/removeButton"
      app:layout_constraintTop_toTopOf="@+id/viewAccounts"
      app:layout_constraintVertical_bias="0.433"
      app:setProductQty="@{product}" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/textItem"
      android:layout_width="100dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:elevation="4dp"
      android:fontFamily="@font/barlow_regular"
      android:text="@string/my_products"
      android:textColor="@color/colorPrimaryAccent"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toTopOf="@+id/textAccountNumber"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/viewAccounts"
      app:setProductName="@{product}"
      android:onClick="@{() -> clickListener.onClick(product)}"
      />

    <androidx.appcompat.widget.AppCompatImageView
      android:id="@+id/removeButton"
      android:layout_width="38dp"
      android:layout_height="38dp"
      android:layout_marginStart="16dp"
      android:clickable="true"
      android:elevation="4dp"
      android:focusable="true"
      android:tint="@color/colorPrimaryAccent"
      android:onClick="@{() -> removeClickListener.onClick(product)}"
      app:layout_constraintBottom_toBottomOf="@+id/viewAccounts"
      app:layout_constraintStart_toEndOf="@+id/textItem"
      app:layout_constraintTop_toTopOf="@+id/viewAccounts"
      app:layout_constraintVertical_bias="0.511"
      app:srcCompat="@drawable/ic_remove_box" />

    <androidx.appcompat.widget.AppCompatImageView
      android:id="@+id/addButton"
      android:layout_width="38dp"
      android:layout_height="38dp"
      android:layout_marginStart="16dp"
      android:clickable="true"
      android:elevation="4dp"
      android:focusable="true"
      android:tint="@color/colorPrimaryAccent"
      android:onClick="@{() -> addClickListener.onClick(product)}"
      app:layout_constraintBottom_toBottomOf="@+id/viewAccounts"
      app:layout_constraintStart_toEndOf="@+id/tvItemQty"
      app:layout_constraintTop_toTopOf="@+id/viewAccounts"
      app:layout_constraintVertical_bias="0.538"
      app:srcCompat="@drawable/ic_add_box" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/textAccountNumber"
      android:layout_width="157dp"
      android:layout_height="19dp"
      android:layout_marginStart="20dp"
      android:layout_marginBottom="5dp"
      android:elevation="4dp"
      android:fontFamily="@font/barlow_regular"

      android:textColor="@color/colorPrimaryAccent"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="@+id/viewAccounts"
      app:layout_constraintStart_toEndOf="@+id/removeButton" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/tvItemsAmount"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:layout_marginEnd="10dp"
      android:elevation="4dp"
      android:fontFamily="@font/barlow_regular"

      android:textColor="@color/colorPrimaryAccent"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="@+id/viewAccounts"
      app:layout_constraintTop_toTopOf="@+id/viewAccounts"
      app:setProductPrice="@{product}"
      />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/textCode"
      android:layout_width="128dp"
      android:layout_height="20dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="10dp"
      android:elevation="4dp"
      android:fontFamily="@font/barlow_regular"
      android:gravity="end"
      android:text="@string/available"
      android:textAllCaps="true"
      android:textColor="@color/colorPrimaryAccent"
      android:textSize="12sp"
      app:layout_constraintEnd_toEndOf="@+id/viewAccounts"
      app:layout_constraintTop_toBottomOf="@+id/tvItemsAmount"
      app:setProductCode="@{product}"
      />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>