<?xml version="1.0" encoding="utf-8"?>
<layout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>
    <variable
      name="viewModel"
      type="com.cabify.cabistore.ui.global.GlobalViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
      android:id="@+id/cat_bottomsheet_coordinator_layout"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerGlobal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryAccent"
        android:theme="@style/AppTheme">

        <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/totalTextView"
          android:layout_width="wrap_content"
          android:layout_height="41dp"
          android:layout_marginTop="45dp"
          android:fontFamily="@font/barlow_regular"
          android:gravity="center"
          android:text="@{viewModel.total.toString()}"
          android:textColor="@color/white"
          android:textSize="30sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/textView6"
          android:layout_width="wrap_content"
          android:layout_height="19dp"
          android:layout_marginStart="2dp"
          android:fontFamily="@font/barlow_regular"
          android:text="@string/euro"
          android:textColor="@color/white"
          android:textSize="14sp"
          app:layout_constraintBottom_toBottomOf="@+id/totalTextView"
          app:layout_constraintStart_toEndOf="@+id/totalTextView"
          app:layout_constraintTop_toTopOf="@+id/totalTextView" />

        <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/textView8"
          android:layout_width="wrap_content"
          android:layout_height="19dp"
          android:fontFamily="@font/barlow_regular"
          android:text="@string/balance"
          android:textColor="@color/colorSecondary"
          app:layout_constraintEnd_toStartOf="@+id/textView6"
          app:layout_constraintStart_toStartOf="@+id/totalTextView"
          app:layout_constraintTop_toBottomOf="@+id/totalTextView" />

        <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/imageContactContent"
          android:layout_width="48dp"
          android:layout_height="48dp"
          android:layout_marginStart="20dp"
          android:layout_marginTop="45dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent">

          <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageContact"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:tint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_chat" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/imageNotificationContent"
          android:layout_width="48dp"
          android:layout_height="48dp"
          android:layout_marginTop="45dp"
          android:layout_marginEnd="20dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent">

          <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivGoToCart"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:tint="@color/colorSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_cart" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
          android:id="@+id/view"
          android:layout_width="match_parent"
          android:layout_height="798dp"
          android:layout_marginTop="40dp"
          android:background="@drawable/backgroundgraph"

          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="1.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <androidx.appcompat.widget.AppCompatImageView
          android:id="@+id/imageGraphMock"
          android:layout_width="418dp"
          android:layout_height="226dp"
          android:layout_marginStart="4dp"
          android:layout_marginTop="8dp"
          android:layout_marginEnd="4dp"
          android:elevation="2dp"
          android:paddingStart="20dp"
          android:paddingEnd="20dp"

          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.533"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="@+id/view"
          app:srcCompat="@drawable/discount" />

      </androidx.constraintlayout.widget.ConstraintLayout>

      <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:elevation="10dp"
        android:paddingTop="125dp"
        android:paddingBottom="55dp"
        app:behavior_hideable="false"
        app:behavior_peekHeight="auto"
        app:cardElevation="24dp"
        app:layout_behavior="@string/bottom_sheet_behavior"
        app:layout_constraintTop_toBottomOf="@+id/imageGraphMock">

        <androidx.appcompat.widget.AppCompatImageView
          android:id="@+id/imageGraph"
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:layout_marginEnd="40dp"
          android:background="@drawable/ic_bg_image_graph"
          android:contentDescription="@string/todo"
          android:elevation="4dp"
          android:visibility="gone"
          app:layout_constraintBottom_toTopOf="@+id/constraintProductLayout"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="@+id/constraintProductLayout"
          app:srcCompat="@drawable/ic_card" />

        <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/constraintProductLayout"
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:layout_marginTop="40dp"
          android:background="@drawable/backgroundlistofproducts"
          android:elevation="3dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent">

          <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
      </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

 <com.google.android.material.bottomnavigation.BottomNavigationView
      android:id="@+id/tabbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:itemIconSize="71dp"
      app:labelVisibilityMode="unlabeled"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:menu="@menu/bottom_nav_menu" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>